--- a/Assigments-Exercises/CSS-Assigments/CSS-1/CSS1.html
+++ b/Assigments-Exercises/CSS-Assigments/CSS-1/CSS1.html
@@ -11,7 +11,7 @@
 
     <body>
         <h1>facebook</h1>
-        <p>What's on your mind, {replace with your name}?</p>
+        <p>What's on your mind, <strong>Franz</strong>?</p>
     </body>
 
 </html>
