--- a/Assigments-Exercises/CSS-Assigments/CSS-2/CSS2.html
+++ b/Assigments-Exercises/CSS-Assigments/CSS-2/CSS2.html
@@ -10,12 +10,8 @@
     <title>Button Styling</title>
 </head>
 <body>
-    <div style =
-    "position: absolute;
-    left: 50%;
-    right: 50%;
-    top: 50%;">
-        <button class = "subscribe-button">
+    <div class="button">
+        <button class = "subscribeButton">
             SUBSCRIBE
         </button>
     </div>
