--- a/Assigments-Exercises/CSS-Assigments/CSS-3/CSS3.html
+++ b/Assigments-Exercises/CSS-Assigments/CSS-3/CSS3.html
@@ -19,17 +19,16 @@
                 <img src="./images/sparky-profile.png" alt="Profile Picture">
             </div>
             <div class="profile-info">
-                <h2>Sparky</h2>
-                <p class="title">Web Developer</p>
-                <p class="bio">Passionate about coding and building web applications.</p>
+                <h2>Franz Baes</h2>
+                <p class="title">Aspiring Cloud Engineer</p>
+                <p class="bio">Passionate about cloud computing and building scalable applications.</p>
             </div>
         </div>
         <div class="social">
             <ul>
-                <li><a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a></li>
-                <li><a href="https://linkedin.com" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a></li>
-                <li><a href="https://discord.com" target="_blank"><img src="images/discord (1).png" alt="Discord"></a></li>
-                <li><a href="https://github.com" target="_blank"><img src="images/github.png" alt="GitHub"></a></li>
+                <li><a href="https://facebook.com/znrfrnz" target="_blank"><img src="images/facebook.png" alt="Facebook"></a></li>
+                <li><a href="https://linkedin.com/in/franzbs" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a></li>
+                <li><a href="https://github.com/znrfrnz" target="_blank"><img src="images/github.png" alt="GitHub"></a></li>
             </ul>
         </div>        
     </div>
